--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
     "name": "cpptools-extension-pack",
     "displayName": "C/C++ Extension Pack",
     "description": "Must have extensions for C++ development in Visual Studio Code.",
+    "publisher": "Kr4is",
+    "icon": "icon.png",
+    "readme": "README.md",
+    "author": {
+      "name": "Bruno Cabado Lousa (Kr4is)"
+    },
+    "license": "SEE LICENSE IN LICENSE.txt",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.62.0"
@@ -9,6 +16,31 @@
     "categories": [
         "Extension Packs"
     ],
+    "keywords": [
+        "C",
+        "C++",
+        "IntelliSense",
+        "Microsoft",
+        "color-theme",
+        "build",
+        "cmake",
+        "remote",
+        "ssh",
+        "wsl",
+        "remote",
+        "codespace",
+        "liveshare",
+        "doxygen",
+        "cmake-format",
+        "clang",
+        "clang-format",
+        "autocomplete",
+        "bracket",
+        "git",
+        "run",
+        "AI",
+        "tabnine"
+      ],
     "extensionPack": [
         "ajshort.include-autocomplete",
         "cheshirekow.cmake-format",
