--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "cpptools-extension-pack",
     "displayName": "C/C++ Extension Pack",
     "description": "Must have extensions for C++ development in Visual Studio Code.",
+    "repository": {
+        "url": "https://github.com/Kr4is/cpptools-extension-pack"
+    },
     "publisher": "Kr4is",
     "icon": "icon.png",
     "readme": "README.md",
