--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "url": "https://github.com/Kr4is/cpptools-extension-pack"
     },
     "bugs": {
-        "url": "https://github.com/Kr4is/cpptools-extension-pack/issues",
+        "url": "https://github.com/Kr4is/cpptools-extension-pack/issues"
     },
     "homepage": "https://github.com/Kr4is/cpptools-extension-pack/blob/master/README.md",
     "publisher": "Kr4is",
