--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "publisher": "Kr4is",
     "icon": "icon.png",
     "galleryBanner": {
-        "color": "#C80000",
+        "color": "222222",
         "theme": "dark"
     },
     "readme": "README.md",
